--- a/views/layout.jade
+++ b/views/layout.jade
@@ -45,6 +45,8 @@ html
                 a(href="/about") About
               li
                 a(href="/demo") Demo
+              li
+                a(href="/upload") Upload
     #body!= body
       
     footer
