backbone sample app from tutorial

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
       div(class='content-wrapper')
         div(class="float-left")
           p(class="site-title")
-            a(href="/") your logo here.
+            a(href="/") you are here.
         div(class="float-right")
           section#login
             ul
