--- a/views/task.jade
+++ b/views/task.jade
@@ -42,11 +42,12 @@ section(class="main-content")
 |	<script type="text/template" id="submit-btm-tpl">
 |		<div class="view">
 |			<button type="button" class="submit-task">submit</button>
+|			<button type="button" class="add-one">+</button>
 |    	</div>
 |	</script>
 |	<script type="text/template" id="my_template">
 |		<div class="view">
-|			<input class="id" type="hidden" value="<%= id %>" />
+|			<input class="_id" type="hidden" value="<%= _id %>" />
 |			<div class="item title"><div class="ttl-holder"><%= title %></div></div>
 |			<div class="item duration"><%= duration %></div>
 |    		<div class="item cost"><%= cost %></div>
