trash commit, will rewrite it

--- a/views/task.jade
+++ b/views/task.jade
@@ -47,7 +47,7 @@ section(class="main-content")
 |	</script>
 |	<script type="text/template" id="my_template">
 |		<div class="view">
-|			<input class="_id" type="hidden" value="<%= _id %>" />
+|			<input class="_id" type="hidden" value="<%= _id.$oid %>" />
 |			<div class="item title"><div class="ttl-holder"><%= title %></div></div>
 |			<div class="item duration"><%= duration %></div>
 |    		<div class="item cost"><%= cost %></div>
