--- a/views/task.jade
+++ b/views/task.jade
@@ -1,6 +1,7 @@
 block javascripts
 	script(src='/javascripts/underscore.js')
 	script(src='/javascripts/backbone.js')
+	script(src='/javascripts/backbone-relational.js')
 	script(src='/javascripts/jquery-1.7.min.js')
 	script(src='/javascripts/task.js')
  
