--- a/views/task.jade
+++ b/views/task.jade
@@ -32,7 +32,7 @@ section(class="main-content")
 |  </script>
 
 |	<script type="text/template" id="task_header_template">
-|		<div class="view">
+|		<div class="view header-row">
 |			<div class="item title">title</div>
 |			<div class="item duration">duration</div>
 |    		<div class="item cost">cost</div>
@@ -41,8 +41,8 @@ section(class="main-content")
 |    	</div>
 |	</script>
 |	<script type="text/template" id="submit-btm-tpl">
-|		<div class="view">
-|			<button type="button" class="submit-task">submit</button>
+|		<div class="view navigation-bar">
+|			<button type="button" class="submit-task">go away</button>
 |			<button type="button" class="add-one">+</button>
 |    	</div>
 |	</script>
@@ -55,7 +55,7 @@ section(class="main-content")
 |    		<div class="item eta"><%= eta %></div>
 |    		<div class="item link"><a href="<%= link %>"><%= link %></a></div>
 |			<div class="item buttons">
-|				<button type="button" class="edit">done</button>
+|				<button type="button" class="remove">remove</button>
 |				<button type="button" class="save">save</button>
 |			</div>
 |    	</div>
