--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     
     // include default stylesheets and any view stylesheets
     link(rel='stylesheet', href=base + '/stylesheets/style.css')
+    link(rel='stylesheet', href=base + '/stylesheets/bootstrap.css')
     
     // include default scripts and any view scripts
     script(src=base + '/javascripts/jquery-1.7.min.js')
