--- a/views/task.jade
+++ b/views/task.jade
@@ -34,7 +34,7 @@ section(class="main-content")
 |	<script type="text/template" id="task_header_template">
 |		<div class="view header-row">
 |			<div class="item title">title</div>
-|			<div class="item duration">duration</div>
+|			<div class="item duration">time</div>
 |    		<div class="item cost">cost</div>
 |    		<div class="item eta">eta</div>
 |    		<div class="item link">link</div>
@@ -42,7 +42,7 @@ section(class="main-content")
 |	</script>
 |	<script type="text/template" id="submit-btm-tpl">
 |		<div class="view navigation-bar">
-|			<button type="button" class="submit-task">go away</button>
+|			<button type="button" class="submit-task btn btn-primary">go away</button>
 |			<button type="button" class="add-one">+</button>
 |    	</div>
 |	</script>
@@ -55,8 +55,8 @@ section(class="main-content")
 |    		<div class="item eta"><%= eta %></div>
 |    		<div class="item link"><a href="<%= link %>"><%= link %></a></div>
 |			<div class="item buttons">
-|				<button type="button" class="remove">remove</button>
-|				<button type="button" class="save">save</button>
+|				<button type="button" class="remove btn">remove</button>
+|				<button type="button" class="save btn">save</button>
 |			</div>
 |    	</div>
 |	</script>
